更新 Pureformer-VC 方法

--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -240,7 +240,12 @@ We typically incorporate **ASTM** into our decoder as a style transfer module.
 ## 3·方法
 
 ![](_Images/2025.06.10_Pureformer-VC_Fig.01.png)
-<a id='fig:1'>The architecture of ***Pureformer-VC***.</a>
+<a id='fig:1'>
+<!--
+The architecture of ***Pureformer-VC***.
+-->
+图 01: ***Pureformer-VC*** 的架构.
+</a>
 
 ### 整体架构
 
@@ -499,7 +504,12 @@ L_{total} = L_{t-vae} + \lambda_{3}L_{t-aam} + \lambda_{4}L_{tri}
 $$
 
 ![](_Images/2025.06.10_Pureformer-VC_Fig.02.png)
-<a id='fig:2'>The illustration of training objective.</a>
+<a id='fig:2'>
+<!--
+The illustration of training objective.
+-->
+图 02: 训练目标的示意图.
+</a>
 
 ### 声码器
 
@@ -510,126 +520,260 @@ In our study, it was pre-trained on the same dataset used for the VC training.
 声码器具有与 **HiFi-GAN** 生成器相同的结构.
 在我们的研究中, 它在 VC 训练时使用相同的数据集进行预训练.
 
-## 4·Experiments and Results
+## 4·实验
 
-### Experimental Setup
+### 实验设置
 
+<!--
 **Datasets and Feature Setup.**
+-->
+**数据集和特征设置**
 
+<!--
 To evaluate the effectiveness of ***Pureformer-VC***, we conducted a comparative experiment and an ablation study on VCTK[^Veaux2020VCTK] and AISHELL-3[^Shi2020Aishell-3] datasets.
 The VCTK corpus includes 109 English speakers, each reading about 400 utterances.
 The AISHELL-3 corpus contains roughly 85 hours of emotion-neutral recordings spoken by 218 native Chinese Mandarin speakers and 88035 utterances.
+-->
+为了评估 ***Pureformer-VC*** 的有效性, 我们在 VCTK[^Veaux2020VCTK] 和 AISHELL-3[^Shi2020Aishell-3] 上构造了一个比较实验和消融实验.
+VCTK 语料库包含了 109 个英语说话人, 每位阅读了约 400 个语句.
+AISHELL-3 语料库大致包含了由 218 位本地中文普通话说话人和 88035 个语句组成的 85 小时情绪中立的录音.
 
-The mel-spectrogram extraction process must align with the pre-trained vocoder and adhere to the algorithm outlined in the HiFi-GAN framework[^Kong2020Hifi-Gan].
+<!--
+The mel-spectrogram extraction process must align with the pre-trained vocoder and adhere to the algorithm outlined in the **HiFi-GAN** framework[^Kong2020Hifi-Gan].
 The signal hyperparameters are defined as follows: 80 Mel frequency filters, 1024 FFT bins, a window length of 1024, a hop length of 256, a sampling rate of 22,050 Hz, and a maximum frequency of 8 kHz.
 The final input features are log-mel spectrograms, obtained by applying the logarithm to the extracted mel-spectrograms.
+-->
+梅尔频谱提取过程必须和预训练声码器对齐, 并遵循 **HiFi-GAN** 框架[^Kong2020Hifi-Gan]中概述的算法.
+信号超参数定义如下:
+- 80 个梅尔频率滤波器,
+- 1024 个 FFT 桶,
+- 窗长为 1024,
+- 帧移为 256,
+- 采样率为 22,050 Hz,
+- 最大频率为 8 kHz.
 
+最后的输入特征是对数梅尔频谱图, 由对提取的梅尔频谱图应用对数变换得到.
+
+<!--
 Considering batch sampling during the training stage, we randomly selected an utterance from one speaker.
-We then sampled two utterances from another speaker to create a training sample: $\{ x_{anc},x_{pos},x_{neg} \}$.
+We then sampled two utterances from another speaker to create a training sample: $\{x_{anc},x_{pos},x_{neg}\}$.
 Five speakers are randomly chosen as unseen speakers for each corpus.
+-->
+考虑在训练阶段的批量采样, 我们随机选择一个说话人中的一个语句.
+然后从另一个说话人中采样两个语句来创建训练样本: $\{x_{anc},x_{pos},x_{neg}\}$.
+每一个语料库中随机选择 5 个未见说话人.
 
+<!--
 **Training Setup.**
+-->
+**训练设置**
 
+<!--
 In the training stage, the batch size is 16.
 The learning rate is constant at $2 \times 10^{-4}$.
-The ***Pureformer-VC*** is trained by Adam optimizer[^Kingma2014Adam] with $ \beta_{1} = 0.9, \beta_{2} = 0.99, \epsilon = 1 \times 10^{-6}$.
+The ***Pureformer-VC*** is trained by **Adam optimizer**[^Kingma2014Adam] with $ \beta_{1} = 0.9, \beta_{2} = 0.99, \epsilon = 1 \times 10^{-6}$.
 The $\lambda_{1}$ is set to 10 and $\lambda_{2}$ ranges from $1 \times 10-4 $ to 1.
 Both the $\lambda_{3},\lambda_{4}$ are set to 1.
 The $\delta$ is 0.3.
+-->
+在训练阶段, 批量大小为 16.
+学习率保持恒定为 $2 \times 10^{-4}$.
+***Pureformer-VC*** 使用 **Adam 优化器**[^Kingma2014Adam] 进行训练, 其中 $\beta_{1} = 0.9, \beta_{2} = 0.99, \epsilon = 1 \times 10^{-6}$.
+$\lambda_{1}$ 设置为 10, $\lambda_{2}$ 范围从 $1 \times 10-4 $ 到 1.
+$\lambda_{3},\lambda_{4}$ 都设置为 1.
+$\delta$ 设置为 0.3.
 
+<!--
 **Baseline Setup.**
+-->
+**基线设置**
 
-We compared ***Pureformer-VC*** with recent VC frameworks, such as AdaIN-VC[^Chou2019One-Shot], AutoVC[^Qian2019Autovc], VQMIVC[^Wang2021Vqmivc], MAIN-VC[^Li2024Main-Vc], RVC$^{1}$, and GPT-SoVITS$^{2}$.
+<!--
+We compared ***Pureformer-VC*** with recent VC frameworks, such as **AdaIN-VC**[^Chou2019One-Shot], **AutoVC**[^Qian2019Autovc], **VQMIVC**[^Wang2021Vqmivc], **MAIN-VC**[^Li2024Main-Vc], **RVC**, and **GPT-SoVITS**.
 The experiments are conducted in a many-to-many, one-shot (any-to-any) setup.
 We further evaluate the performance of the proposed model in cross-lingual VC, where the source utterance's language differs from that of the target language.
+-->
+我们将 ***Pureformer-VC*** 与最近的 VC 框架, 如 **AdaIN-VC**[^Chou2019One-Shot], **AutoVC**[^Qian2019Autovc], **VQMIVC**[^Wang2021Vqmivc], **MAIN-VC**[^Li2024Main-Vc], **RVC**, 和 **GPT-SoVITS** 进行了比较.
+实验采用了多到多, 单样本 (任意到任意) 设置.
+我们进一步评估了所提出的模型在跨语言 VC 中的性能, 其中源语句的语言与目标语言不同.
 
-### Metrics and Evaluation
+### 度量和评估
 
-We assess the naturalness and intelligibility of the generated speech using subjective metrics, such as the Mean Opinion Score (MOS).
-Additionally, we utilize objective metrics to evaluate timbre similarity with the target speech, including the Voice Similarity Score (VSS) and Mel-Cepstral Distortion (MCD).
+<!--
+We assess the naturalness and intelligibility of the generated speech using subjective metrics, such as the **Mean Opinion Score (MOS)**.
+Additionally, we utilize objective metrics to evaluate timbre similarity with the target speech, including the **Voice Similarity Score (VSS)** and **Mel-Cepstral Distortion (MCD)**.
 Higher scores indicate greater effectiveness of the voice conversion (VC) system.
+-->
+我们使用主观度量, 如**平均意见得分 (Mean Opinion Score, MOS)**, 来评估生成的语音的自然度和易用性.
+此外, 我们利用客观度量来评估声音的音色相似性与目标语音, 包括**声音相似性得分 (Voice Similarity Score, VSS)** 和 **梅尔倒谱失真 (Mel-Cepstral Distortion, MCD)**.
+得分越高, 声音转换系统的效果越好.
 
+<!--
 **Mean Opinion Score (MOS)**.
-
 The Mean Opinion Score (MOS) is a widely used metric for assessing the subjective quality of speech or audio.
 It is based on ratings from human listeners, who are asked to evaluate the quality of speech samples using a scale that typically ranges from 1 to 5.
 A higher MOS signifies better reconstruction quality.
+-->
+**平均意见得分**是一个广泛使用的度量, 用于评估语音或音频的主观质量.
+它基于来自人类的评价, 听众被要求对语音样本的质量进行评分, 评分通常在 1 到 5 之间.
+MOS 越高, 语音重构质量越好.
 
+<!--
 **Voice similarity score (VSS)**.
-
 The Voice Similarity Score (VSS) is an objective metric that quantifies the degree of resemblance between generated speech and authentic or target speech in terms of timbre, tone, and voice quality.
 VSS is calculated based on embedding similarity derived from a pre-trained speaker verification model (Resemblyzer) [^Desplanques2020Ecapa-TDNN].
 Higher scores represent greater similarity, indicating improved voice conversion (VC) performance.
+-->
+**声音相似性得分**是一种客观度量, 它衡量生成语音与真实或目标语音的音色, 音调, 和语音质量之间的相似度.
+VSS 基于预训练说话人验证模型 (Resemblyzer) [^Desplanques2020Ecapa-TDNN] 提供的嵌入相似性计算.
+得分越高, 表示声音转换性能越好.
 
+<!--
 **Mel-cepstral distortion (MCD)**.
-
 The MCD is an objective quantitative measure that evaluates the Mel-cepstral divergence between the source and generated utterances.
 The lower the MCD, the better the reconstruction effect.
 During the testing phase, both many-to-many and one-shot (any-to-any) VC are conducted using non-parallel data.
 For evaluation, 10 source/target speech pairs are fed into each VC model under two scenarios.
 After this, 5 participants are invited to rate the speech samples.
+-->
+**梅尔倒谱失真**是一种客观量化度量, 它评估源语音和生成语音之间的梅尔倒谱散度.
+MCD 越低, 重构效果越好.
 
-### Experimental Results
+在测试阶段, 多到多和单样本 (任意到任意) 的声音转换都采用非并行数据进行实验.
+为了评估, 10 个源/目标语音对分别输入到每个 VC 模型中, 并在两个场景下进行评估.
+之后, 5 位参与者被邀请对语音样本进行评分.
 
-Table [table:1](#table:1) and [table:2](#table:2) present a comparative analysis of the ***Pureformer-VC*** against baseline methods in both many-to-many and one-shot VC settings across both datasets.
+## 5·结果
 
-<a id=table:1>Comparison of baseline and proposed methods for many-to-many and one-shot VC on the VCTK dataset (with a $95\%$ confidence interval).</a>
+### 对比实验
+<!--
+[Table.01](#table:1) and [Table.02](#table:2) present a comparative analysis of the ***Pureformer-VC*** against baseline methods in both many-to-many and one-shot VC settings across both datasets.
+-->
+[表格 01](#table:1) 和[表格 02](#table:2) 展示了 ***Pureformer-VC*** 在多到多和单样本 (任意到任意) VC 设置下, 与基线方法在两个数据集上的比较.
 
-<a id=table:2>Comparison of baseline and proposed methods for many-to-many and one-shot VC on the AISHELL-3 dataset (with a $95\%$ confidence interval).</a>
+![](_Images/2025.06.10_Pureformer-VC_Tab.01.png)
+<a id=table:1>
+<!--
+Comparison of baseline and proposed methods for many-to-many and one-shot VC on the VCTK dataset (with a $95\%$ confidence interval).
+-->
+表格 01: 基线和所提方法在 VCTK 数据集上多到多和单样本声音转换的比较 (置信区间为 $95\%$).
+</a>
 
+![](_Images/2025.06.10_Pureformer-VC_Tab.02.png)
+<a id=table:2>
+<!--
+Comparison of baseline and proposed methods for many-to-many and one-shot VC on the AISHELL-3 dataset (with a $95\%$ confidence interval).
+-->
+表格 02: 基线和所提方法在 AISHELL-3 数据集上多到多和单样本声音转换的比较 (置信区间为 $95\%$).
+</a>
+
+<!--
 **MCD and MOS metrics.**
-
 The MOS and MCD can evaluate the effectiveness of speech reconstruction, collectively referred to as reconstruction metrics.
 Since the original sampling rate of the AISHELL-3 dataset is higher than that of the VCTK dataset, the quality of speech reconstruction is superior, resulting in better reconstruction metrics for the AISHELL-3 dataset.
 The ***Pureformer-VC*** outperforms the encoder-decoder baseline models in both many-to-many and one-shot experimental configurations with respect to reconstruction metrics.
 However, when compared to state-of-the-art methods like RVC and GPT-SoVITS, the ***Pureformer-VC*** still exhibits a slight performance gap.
-These results showcase the effectiveness of the pure transformer architecture.
+These results showcase the effectiveness of the pure **Transformer** architecture.
+-->
+**MCD 和 MOS 度量.**
+MOS 和 MCD 可以评估语音重构的有效性, 统称为重构度量.
+由于 AISHELL-3 数据集的采样率高于 VCTK 数据集, 语音重构的质量要更高, 因此 AISHELL-3 数据集的重构度量优于 VCTK 数据集.
+***Pureformer-VC*** 在多到多和单样本实验配置下, 相对于编码器-解码器基线模型.
+然而, 当与 RVC 和 GPT-SoVITS 等最新方法进行比较时, ***Pureformer-VC*** 仍然表现出微小的性能差距.
+这些结果表明了纯 Transformer 架构的有效性.
 
+<!--
 **VSS metric.**
-
 The VSS evaluation measures the similarity between the generated target timbre and the actual target timbre using a resemblyzer.
 Compared to the four classic encoder-decoder-based VC baselines, the ***Pureformer-VC*** surpasses them in the VSS metric.
 However, a slight gap remains in the VSS performance between PVC and the state-of-the-art models RVC and GPT-SoVITS.
 As shown in the results, we further investigated the impact of removing either the AAMSoftmax loss or the triplet loss from the training objectives to assess the model's ability to represent timbre in the embedded vectors during training.
 It is evident that without these two losses, the proposed model's VSS stays relatively consistent with that of the baseline model.
 Therefore, incorporating these losses helps enhance the model's VC expressiveness.
+-->
+**VSS 度量.**
+VSS 评估使用 Resemblyzer 衡量生成目标音色与实际目标音色之间的相似度.
+相比四个经典的编码器-解码器-基线 VC 方法, ***Pureformer-VC*** 在 VSS 度量上优于它们.
+然而, PVC 和最新模型 RVC 和 GPT-SoVITS 之间的 VSS 性能差距仍然存在微小差距.
+如上所述, 我们进一步研究了从训练目标中移除 AAMSoftmax 损失或三元组损失的影响, 以评估模型在训练期间如何在嵌入向量中表示音色.
 
-![](figs/tsne.pdf)
+### 消融实验
 
-<a id='fig:4'>The visualization of speaker representations extracted from 6 unseen speakers’ utterances.</a>
-
-### Ablation Study
-
+<!--
 We conduct ablation experiments to validate the effects of triplet loss and AAM-softmax loss on disentanglement.
 We set up the following models: (a) the ***Pureformer-VC*** model, (b) the ***Pureformer-VC*** model without triplet loss (w/o triplet), and (c) the ***Pureformer-VC*** model without AAM-softmax loss (w/o AAM-softmax).
 We used the resemblyzer to detect synthetic speech and evaluate conversion quality.
 It assigns detection scores to fake (i.e., the VC model's experimental outputs) and authentic utterances from the target speaker after learning the target's characteristics from ten additional genuine utterances.
 A higher score signifies a closer resemblance in timbre and superior speech quality.
-The results are detailed in Table [table:3](#table:3).
-We found that the decision scores of our method are higher than those of the best baseline model, MAIN-VC.
+The results are detailed in [Table.03](#table:3).
+We found that the decision scores of our method are higher than those of the best baseline model, **MAIN-VC**.
 Furthermore, the experiments demonstrate that both triplet loss and AAM-Softmax contribute to improving the accuracy of timbre generation.
+-->
+我们构造了消融实验, 以验证三元组损失和 AAM-Softmax 损失对分离的影响.
+我们设置了以下模型:
+(a) ***Pureformer-VC*** 模型,
+(b) ***Pureformer-VC*** 模型无三元组损失 (w/o triplet),
+(c) ***Pureformer-VC*** 模型无 AAM-Softmax 损失 (w/o AAM-Softmax).
 
-For a visual evaluation of each model's disentanglement capability, the t-SNE scatter plots of the speaker representations are shown in Figure [fig:4](#fig:4).
+我们使用 Resemblyzer 检测合成语音并评估转换质量.
+在通过十条额外的真实语句学习目标特征后, 将检测分数分配给虚假语句 (即模型的实验输出) 和目标说话人的真实语句.
+分数越高表示在音色更接近, 语音质量更优.
+结果详细记录在[表格 03](#table:3).
+我们发现, 我们的方法的决策分数高于最佳基线模型, **MAIN-VC**.
+此外, 实验表明, 三元组损失和 AAM-Softmax 都有助于提高音色生成的准确性.
+
+![](_Images/2025.06.10_Pureformer-VC_Tab.03.png)
+<a id=table:3>
+<!--
+Fake Detection score comparison for ablation study ablation.
+-->
+表格 03: 消融实验的虚假检测分数比较..
+</a>
+
+<!--
+For a visual evaluation of each model's disentanglement capability, the t-SNE scatter plots of the speaker representations are shown in [Figure.03](#fig:3).
 The AAM-softmax loss has a significant impact on the clustering of speaker embedding vectors, while the triplet loss helps create more distinct boundaries between categories.
+-->
+为了可视化每个模型的分离能力, 我们展示了说话人表示的 t-SNE 散点图, 如[图 03](#fig:3) 所示.
+AAM-Softmax 损失对说话人嵌入向量的聚类有着显著影响, 而三元组损失有助于创建不同类别之间的更加明显的界限.
 
-<a id=table:3>Fake Detection score comparison for ablation study ablation</a>
+![](_Images/2025.06.10_Pureformer-VC_Fig.03.png)
+<a id='fig:3'>
+<!--
+The visualization of speaker representations extracted from 6 unseen speakers’ utterances.
+-->
+从六位未见说话人的语句中提取的说话人表示的可视化.
+</a>
 
-### Cross-lingual VC
+### 跨语种实验
 
-Pureformer VC is also capable of performing cross-lingual voice conversion (CVC), where the source and target utterances are in different languages.
+<!--
+***Pureformer-VC*** is also capable of performing cross-lingual voice conversion (CVC), where the source and target utterances are in different languages.
 We trained ***Pureformer-VC*** on a mixture of the AISHELL-3 and VCTK datasets.
 Due to varying pronunciation habits, the reconstruction metrics ($MOS=3.15, MCD=5.12$) and VSS ($2.95$) scores for cross-lingual voice conversion are lower than those for monolingual VC experiments.
 The bilingual timbre experiments suggest that additional latent variables may be necessary to decouple the languages using special encoders for improved conversion performance.
+-->
+***Pureformer-VC*** 也可以执行跨语言语音转换 (Cross-lingual Voice Conversion, CVC), 其中源句和目标句的语言不同.
+我们在 AISHELL-3 和 VCTK 数据集的混合上训练了 ***Pureformer-VC***.
+由于发音习惯的不同, 跨语言语音转换的重构指标 ($MOS=3.15, MCD=5.12$) 和 VSS ($2.95$) 得分低于单语言语音转换实验.
+双语的音色实验表明, 可能需要额外的潜变量来分离语言, 使用特殊编码器以提高转换性能.
 
-## 5·Conclusion
+## 6·结论
 
+<!--
 In this paper, we present a novel approach to voice conversion (VC) by leveraging a pure transformer network designed as a VAE encoder-decoder framework called ***Pureformer-VC***.
 Within the decoder, we integrate a styleformer module, which enhances the model’s capacity for style transfer.
 Additionally, we improve the effectiveness of the speaker encoder by incorporating triplet loss and AAMSoftmax loss.
 These enhancements significantly boost the model's ability to capture and represent the nuances of different speaking voices, resulting in more accurate and robust VC.
 In conclusion, the ***Pureformer-VC*** model, fortified by the strategic application of specialized loss functions and style adaptation mechanisms, represents a significant advancement in the field of VC.
+-->
+在本文中, 我们提出了一个用于声音转换的新方法, 通过利用纯 Transformer 网络作为 VAE 编码器-解码器框架的 ***Pureformer-VC***.
+在解码器中, 我们集成了一个 Styleformer 模块, 它增强了模型的风格转移能力.
+此外, 我们通过包含三元组损失和 AAMSoftmax 损失来改进说话人编码器的效果.
+这些改进显著提高了模型捕捉和表示不同说话人的细微差别的能力, 实现更准确和更稳健的声音转换.
+总的来说, ***Pureformer-VC*** 模型, 由专用损失函数和风格适应机制的策略应用, 是声音转换领域的一个重要进步.
 
-## References
+## 参考文献
 
 [^Toda2007Voice]: Voice Conversion Based on Maximum-Likelihood Estimation of Spectral Parameter Trajectory. IEEE Transactions on Audio, Speech, and Language Processing 2007.
 [^Helander2010Voice]: Voice Conversion Using Partial Least Squares Regression. IEEE Transactions on Audio, Speech, and Language Processing 2010.
