--- a/Models/Tokenizers/2025.08.22_TaDiCodec.md
+++ b/Models/Tokenizers/2025.08.22_TaDiCodec.md
@@ -118,3 +118,25 @@ Our models demonstrate notable improvements on challenging benchmarks such as ar
 We use a three-dimensional coordinate system to display the performance across three dimensions: the x-axis represents WER, the y-axis represents UTMOS, and the z-axis represents SIM.
 
 The size of the markers is proportional to the kbps value.</a>
+
+## 2·Related Work
+
+**Discrete Speech Tokenizer**\quad  
+Discrete speech tokenizers convert continuous speech into discrete tokens, enabling modern zero-shot TTS and speech language modeling.
+
+Early tokenizers[^Zeghidour2021Soundstream], [^D{\'e}fossez2022High], [^Kumar2024High-Fidelity] focused on audio compression, relying on residual vector quantization (RVQ)[^Zeghidour2021Soundstream], [^Lee2022Autoregressive] and operating at high frame rates and bitrates, settings ill-suited for language modeling.  
+Recent work has shifted toward designing tokenizers tailored for language modeling, emphasizing low frame rates[^D{\'e}fossez2024Moshi], [^Li2025DualCodec], semantic-rich representations[^Zhang2023Speechtokenizer], [^D{\'e}fossez2024Moshi], [^Li2025DualCodec], [^Wang2025Spark-TTS], [^Ye2025Codec], [^Ye2025Llasa], [^Liu2024Semanticodec], [^Guo2024FireRedTTS], [^Du2024Cosyvoice], [^Zhang2025Vevo], and single-layer codebooks[^Parker2024Scaling], [^Xin2024Bigcodec], [^Ji2024Wavtokenizer].  
+Diffusion-based methods[^Ho2020Denoising], [^Song2020Score-Based] have gained popularity for their performance at low token rates and scalability.
+
+However, they typically follow a two-stage pipeline: extracting tokens via self-supervised speech representations[^Chung2021W2v-Bert], [^Baevski2020Wav2vec], [^Chen2022Wavlm], [^Radford2023Robust], [^Hsu2021Hubert], [^Chiu2022Self-Supervised], then reconstructing waveforms through diffusion.  
+For example, [^Welker2025FlowDec], [^Yang2024Generative] apply diffusion to improve de-tokenization quality, but still operate at relatively high token rates.
+
+Achieving ultra-low bitrates (*e.g.*, below 0.2 kbps or 20 tokens/s) with a compact, generative-friendly framework remains a major challenge.
+
+**Zero-shot TTS**\quad  
+Modern zero-shot TTS systems typically operate on discrete speech tokens using either autoregressive (AR) language modeling[^Wang2023Neural], [^Anastassiou2024Seed-TTS], [^Du2024CosyVoice], [^Du2024Cosyvoice], [^Guo2024FireRedTTS], [^Ye2025Llasa], [^Wang2025Spark-TTS], [^Kharitonov2023Speak,], [^Peng2024VoiceCraft] or masked generative (language) modeling (MGM)[^Ju2024NaturalSpeech], [^Borsos2023Soundstorm], [^Wang2024Maskgct], [^Yang2025Pseudo-Autoregressive].
+
+Some models[^Wang2024Maskgct], [^Anastassiou2024Seed-TTS], [^Du2024Cosyvoice], [^Du2024CosyVoice], [^Guo2024FireRedTTS] adopt an "AR + diffusion'' framework, where a diffusion decoder enhances waveform quality based on predicted tokens.  
+Zero-shot TTS is also foundational in recent end-to-end spoken language models.
+
+For example, Qwen2.5-Omni[^Xu2025Qwen2.] uses a "talker'' module to generate speech tokens from the text output of a "thinker.'' Similar architectures[^Wang2024Freeze-Omni], [^Fang2024Llama-Omni] decode speech directly from text, while others[^Huang2025Step-Audio], [^Ding2025Kimi-Audio], [^Zeng2024Scaling], [^Zeng2024GLM-4-Voice] leverage TTS models to synthesize large-scale speech corpora for training dialogue agents.
